--- a/Mimic_Readmission_Prediction/Mimic_Hospical_Readmission - Preprocessing and Modeling.ipynb
+++ b/Mimic_Readmission_Prediction/Mimic_Hospical_Readmission - Preprocessing and Modeling.ipynb
@@ -53,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,10 +73,10 @@
     "\n",
     "# Standard libraries\n",
     "import os, io, datetime, sys, json\n",
+    "import shutil, subprocess, pathlib, shlex, platform\n",
     "from tqdm import tqdm\n",
     "import joblib\n",
     "from pathlib import Path\n",
-    "\n",
     "\n",
     "# Data manipulation\n",
     "import pandas as pd\n",
@@ -4787,6 +4787,76 @@
     "plt.title(\"Feature Impact Bar Plot\", fontsize=14)\n",
     "plt.savefig('Saved/lr_l1_SHAP_Bar_Plot.jpg', dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acebb71a",
+   "metadata": {},
+   "source": [
+    "# 6. Export a Conda Environment (.yml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad0765f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Locate the conda executable robustly -------------------------------\n",
+    "conda_exe = (\n",
+    "    os.environ.get(\"CONDA_EXE\")                  # most reliable: set by conda\n",
+    "    or shutil.which(\"conda\")                     # falls back to PATH search\n",
+    ")\n",
+    "\n",
+    "# Extra Windows fallback: …\\condabin\\conda.bat next to the env\n",
+    "if conda_exe is None and os.name == \"nt\":\n",
+    "    likely = pathlib.Path(sys.prefix).parents[1] / \"condabin\" / \"conda.bat\"\n",
+    "    if likely.exists():\n",
+    "        conda_exe = str(likely)\n",
+    "\n",
+    "if conda_exe is None:\n",
+    "    raise RuntimeError(\n",
+    "        \"Cannot locate the 'conda' command. \"\n",
+    "        \"Open Jupyter from an activated conda prompt, \"\n",
+    "        \"or add Anaconda's 'condabin' to your PATH.\"\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c28919e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting ↳ c:\\Users\\Sheng Miao\\OneDrive\\桌面\\SpringBoard\\Springboard_MyProjects\\Mimic_Readmission_Prediction\\Saved\\env_ds_env_20250707_1110.yml\n",
+      "✅  Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detect the active Conda env name\n",
+    "env_name = \"ds_env\"\n",
+    "timestamp  = datetime.datetime.now().strftime(\"%Y%m%d_%H%M\")\n",
+    "\n",
+    "# Make sure Saved/exists\n",
+    "out_dir   = Path.cwd() / \"Saved\"\n",
+    "out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Compose the filename inside that folder\n",
+    "yml_file  = out_dir / f\"env_{env_name}_{timestamp}.yml\"\n",
+    "\n",
+    "# --- 4️⃣  Run the export ------------------------------------------------------\n",
+    "cmd = [conda_exe, \"env\", \"export\", \"--name\", env_name]\n",
+    "print(\"Exporting ↳\", yml_file)\n",
+    "with yml_file.open(\"w\") as f:\n",
+    "    subprocess.run(cmd, stdout=f, check=True)\n",
+    "print(\"✅  Done.\")\n"
    ]
   }
  ],
